swagger, new matches endpoint
